changes to work with 1.16.5 and java 8